# TPM2

./: .gitignore  CMakeLists.txt  README  config.sample.xml  feature_list.rst  todo.rst  tpm2_config.h.in
Documentation/: tpm2.rst
Documentation/tpm2-dev.LaTeX/: tpm2-dev.tex
debian/: changelog  control  tpm2-pack.install  tpm2.install
src/: CMakeLists.txt
src/common/: CMakeLists.txt  architecture.cpp  architecture.h  common_utilities.cpp  common_utilities.h  dependencies.cc  dependencies.cpp  dependencies.h  file_list.cc  file_list.cpp  file_list.h  file_trie.h  file_wrapper.h  managed_buffer.h  message_digest.cpp  message_digest.h  package_constraints.cpp  package_constraints.h  package_meta_data.cc  package_meta_data.cpp  package_meta_data.h  safe_console_input.cpp  safe_console_input.h  transport_form.cc  transport_form.cpp  transport_form.h  version_number.cpp  version_number.h
src/common/tests/: CMakeLists.txt  test_file_trie.cc  test_file_trie.cpp  test_message_digest.cc  test_package_constraints.cpp  test_version_number.cpp
src/libtpm2/: CMakeLists.txt  architecture.cc  common_utilities.cc  crypto_tools.cc  depres2.cc  depres2.cpp  depres_common.cc  depres_common.cpp  depres_factory.cpp  package_version.cc
src/libtpm2/evaluate_solvers/: CMakeLists.txt  evaluate_all_scenarios.cc  evaluate_all_scenarios.cpp  evaluate_all_scenarios.h  evaluate_all_scenarios_cmd.cc  evaluate_all_scenarios_cmd.cpp  evaluate_solvers_config.h.in  print_scenario.cc  print_scenario.cpp  read_scenario.cc  read_scenario.cpp  read_scenario.h  run_scenario.cc  run_scenario.h  run_scenario_cmd.cpp
src/libtpm2/evaluate_solvers/scenarios/: child_upgrade.xml  child_upgrade_constrs.xml  cycle_downgrade.xml  cycle_install.xml  cycle_install_pinning.xml  cycle_install_upgrade.xml  cycle_oscillation.xml  file_move_versions.xml  file_move_versions_upgrade.xml  file_user_conflict.xml  indirectly_selected_keep.xml  install_simple.xml  remove_dependency_conflict.xml  remove_file_conflict.xml  remove_temporary_added_package.xml  request_nonexistent_version.xml  simple_upgrade.xml  stay_simple.xml  upgrade_all_tricky.xml  user_contradiction_1.xml  user_contradiction_2.xml  user_file_conflict.xml  user_indirect_file_conflict1.xml  user_indirect_file_conflict2.xml
src/libtpm2/include/: common_utilities.h  crypto_tools.h  depres2.h  depres_common.h  depres_factory.h  file_trie.h  package_constraints.h  package_version.h
src/libtpm2/tests/: CMakeLists.txt  test_depres2_basics.cc  test_depres2_basics.cpp  test_depres_common.cc  test_package_version.cc  test_package_version.cpp
src/tpm2/: CMakeLists.txt  compare_system.cc  compare_system.h  depres.cc  depres.cpp  depres.h  directory_repository.cc  directory_repository.cpp  directory_repository.h  installation.cc  installation.cpp  installation.h  installation_package_version.cc  installation_package_version.h  package_db.cc  package_db.cpp  package_db.h  package_provider.cc  package_provider.cpp  package_provider.h  parameters.cc  parameters.cpp  parameters.h  pkg_tools.cpp  pkg_tools.h  repo_index.cc  repo_index.h  repo_tools.cc  repo_tools.h  repository.h  standard_repo_index.cc  standard_repo_index.h  stored_maintainer_scripts.cc  stored_maintainer_scripts.cpp  stored_maintainer_scripts.h  tpm2.cc  tpm2.cpp  utility.cc  utility.cpp  utility.h
src/tpm2_pack/: CMakeLists.txt  pack.cc  pack.cpp  pack.h  tpm2_pack.cc
tools/: extract_transport_form.py  find_scenarios.py  list_scenarios
